OAK-5664: require Java 8
git-svn-id: https://svn.apache.org/repos/asf/jackrabbit/oak/trunk@1792074 13f79535-47bb-0310-9956-ffa450edef68